--- a/main.css
+++ b/main.css
@@ -16,14 +16,16 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     text-align: center;
+    font-weight: normal;
 }
 
 .picture img {
     display: block;
-    margin: 0 auto;
+    margin: 0 auto 4em;
     max-width: 100%;
 }
 
 #banner {
     font-size: 2.5em;
+    font-weight: bold;
 }
