--- a/main.css
+++ b/main.css
@@ -16,6 +16,13 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     text-align: center;
+}
+
+.container {
+    line-height: 0.5;
+}
+
+.container h2 {
     font-weight: normal;
 }
 
