--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Canterbury;
+    src: url(./fonts/Canterbury.ttf);
+}
+
 html {
     box-sizing: border-box;
 }
@@ -20,6 +25,12 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     line-height: 1em;
+    font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
+    font-family: 'Playball';
+    font-size: 40px;
 }
 
 .container {
@@ -39,4 +50,5 @@ h1 {
 #banner {
     font-size: 2.5em;
     font-weight: bold;
+    font-family: Canterbury;
 }
